# synapse-contracts

./: .gitignore  TODO.md
.github/workflows/: rust.yml
src/: lib.rs
src/storage/: mod.rs
src/types/: mod.rs
synapse-core/: .env.example  Cargo.toml  README.md
synapse-core/migrations/: 20250326120000_webhook_endpoints.sql  20250326120001_webhook_deliveries.sql
synapse-core/src/: lib.rs  main.rs
synapse-core/src/handlers/: admin.rs
synapse-core/src/services/: mod.rs  transaction_processor.rs  webhook_dispatcher.rs
test_snapshots/: admin_can_retry_dlq.1.json  dlq_entry_removed_after_successful_retry.1.json  finalize_settlement_emits_settlement_finalized_event.1.json  finalize_settlement_extends_ttl.1.json  finalize_settlement_stores_record.1.json  full_lifecycle_pending_to_completed.1.json  mark_failed_creates_dlq_entry.1.json  mark_failed_panics_when_transaction_completed.1.json  mutating_call_while_paused_panics.1.json  non_admin_cannot_retry_dlq.1.json  register_deposit_is_idempotent.1.json  register_deposit_returns_tx_id.1.json  retry_dlq_panics_when_no_dlq_entry.1.json
test_snapshots/tests/: test_finalize_settlement_panics_when_period_start_exceeds_period_end.1.json  test_finalize_settlement_panics_when_transaction_already_settled.1.json  test_finalize_settlement_succeeds_when_transactions_unsettled.1.json  test_finalize_settlement_writes_settlement_id_back_onto_transactions.1.json  test_mark_failed_allowed_when_pending.1.json  test_mark_failed_allowed_when_processing.1.json  test_mark_failed_panics_when_completed.1.json  (+4 more)
tests/: contract_test.rs
